--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,6 +65,7 @@
         android:backgroundTint="@color/tintcolor"
         android:text="SIGN IN"
         android:textSize="15dp"
+        android:onClick="login"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -93,6 +94,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Register"
+        android:clickable="true"
+        android:onClick="switchToRegisterActivity"
         android:textColor="@color/tintcolor"
         android:textSize="18sp"
         android:textStyle="bold"
