--- a/app/src/main/res/layout/activity_explore_ads.xml
+++ b/app/src/main/res/layout/activity_explore_ads.xml
@@ -13,6 +13,7 @@
         android:layout_marginBottom="16dp"/>
 
     <ListView
+        android:allowClickWhenDisabled="true"
         android:id="@+id/ad_listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
