--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -25,9 +25,8 @@
         android:layout_width="260dp"
         android:layout_height="57dp"
         android:backgroundTint="@color/tintcolor"
-        android:onClick="MainActivity"
         android:text="SIGN UP"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -92,6 +91,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign In"
+        android:clickable="true"
+        android:onClick="switchToLoginActivity"
         android:textColor="@color/tintcolor"
         android:textSize="18sp"
         android:textStyle="bold"
