--- a/app/src/main/res/layout/activity_seller_home.xml
+++ b/app/src/main/res/layout/activity_seller_home.xml
@@ -29,6 +29,7 @@
 
     <Button
         android:id="@+id/manage_account_button"
+        android:onClick="switchToMyAccount"
         android:layout_width="match_parent"
         android:layout_marginTop="25dp"
         android:layout_height="wrap_content"
@@ -38,6 +39,7 @@
 
     <Button
         android:id="@+id/browse_ads_button"
+        android:onClick="switchToExploreAds"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
@@ -46,6 +48,7 @@
 
     <Button
         android:id="@+id/create_ad_button"
+        android:onClick="switchToAddNew"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
@@ -54,6 +57,7 @@
 
     <Button
         android:id="@+id/view_edit_ads_button"
+        android:onClick="switchToMyAds"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
