--- a/app/src/main/res/layout/activity_explore_ads.xml
+++ b/app/src/main/res/layout/activity_explore_ads.xml
@@ -10,7 +10,8 @@
         android:id="@+id/category_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp"
+        android:minHeight="48dp" />
 
     <ListView
         android:allowClickWhenDisabled="true"
