--- a/app/src/main/res/layout/ad_detail_activity.xml
+++ b/app/src/main/res/layout/ad_detail_activity.xml
@@ -2,41 +2,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
-
-    <TextView
-        android:id="@+id/ad_detail_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="28sp"
-        android:layout_marginTop="20dp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="8dp"/>
-
-    <TextView
-        android:id="@+id/ad_detail_category"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_marginTop="15dp"
-        android:textColor="@android:color/darker_gray"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="8dp"/>
+    android:padding="16dp"
+    android:background="@color/white">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/rounded_border_background" />
+
+    <TextView
+        android:id="@+id/ad_detail_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:text="Hello"
+
+        android:textColor="@color/black"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="8dp"/>
+
+    <TextView
+        android:id="@+id/ad_detail_category"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="22sp"
+        android:textColor="@color/black"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="8dp"/>
 
     <TextView
         android:id="@+id/ad_detail_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:layout_marginTop="20dp"
         android:textColor="@color/black"
         android:layout_marginBottom="16dp"/>
@@ -48,20 +52,22 @@
 
         <Button
             android:id="@+id/btn_call"
-            android:layout_width="wrap_content"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_weight="1"
+            android:layout_gravity="bottom"
             android:backgroundTint="@color/tintcolor"
+            android:contentDescription="Call"
+            android:drawableLeft="@drawable/baseline_call_24"
+            android:paddingLeft="10dp"
+            android:layout_marginEnd="10dp"
             android:text="Call"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
+            android:textColor="@android:color/white" />
 
         <Button
             android:id="@+id/btn_message"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
             android:layout_weight="1"
             android:backgroundTint="@color/primary"
             android:text="Message"
@@ -70,13 +76,16 @@
 
         <Button
             android:id="@+id/btn_whatsapp"
-            android:layout_width="wrap_content"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_gravity="bottom"
             android:backgroundTint="@color/tintcolor"
-            android:text="WhatsApp"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
+            android:contentDescription="Whatsapp"
+            android:layout_marginStart="10dp"
+            android:drawableLeft="@drawable/whatsapp"
+            android:paddingLeft="18dp"
+            android:textColor="@color/white" />
 
     </LinearLayout>
 </LinearLayout>
