--- a/app/src/main/res/layout/add_new_activity.xml
+++ b/app/src/main/res/layout/add_new_activity.xml
@@ -3,16 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
-    android:background="@color/primary">
+    android:padding="16dp">
 
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="378dp"
-        android:layout_height="300dp"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/mainimg" />
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPagerImages"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:layout_marginTop="16dp" />
 
     <EditText
         android:id="@+id/editTitle"
@@ -20,8 +17,7 @@
         android:layout_height="wrap_content"
         android:hint="Ad Title"
         android:minHeight="48dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColor="@color/black" />
 
     <EditText
         android:id="@+id/editDescription"
@@ -29,8 +25,7 @@
         android:layout_height="wrap_content"
         android:hint="Description"
         android:minHeight="48dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColor="@color/black" />
 
     <EditText
         android:id="@+id/editContact"
@@ -38,8 +33,7 @@
         android:layout_height="wrap_content"
         android:hint="Contact Info"
         android:minHeight="48dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColor="@color/black" />
 
     <Spinner
         android:id="@+id/spinnerCategory"
@@ -53,21 +47,21 @@
 
     <Button
         android:id="@+id/btnAddImages"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/tintcolor"
         android:text="Add Images" />
 
     <Button
         android:id="@+id/btnPreview"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:backgroundTint="@color/tintcolor"
         android:layout_height="wrap_content"
         android:text="Preview Ad" />
 
     <Button
         android:id="@+id/btnSubmit"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:backgroundTint="@color/tintcolor"
         android:layout_height="wrap_content"
         android:text="Submit Ad" />
