--- a/app/src/main/res/layout/ad_list_adapter.xml
+++ b/app/src/main/res/layout/ad_list_adapter.xml
@@ -1,107 +1,136 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="10dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="4dp"
+    app:cardUseCompatPadding="true"
     android:clickable="true"
-    android:outlineAmbientShadowColor="@color/black"
+    android:foreground="?android:attr/selectableItemBackground"
     android:background="@drawable/rounded_border_background">
 
-    <ImageView
-        android:id="@+id/ad_image"
-        android:layout_width="100dp"
-        android:layout_height="120dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/mainimg"
-        android:outlineProvider="background" />
-
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_marginStart="16dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="2dp">
 
-        <TextView
-            android:id="@+id/ad_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ad Title"
-            android:textColor="@color/black"
-            android:textSize="24sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/ad_category"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Category"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
+        <ImageView
+            android:id="@+id/ad_image"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/mainimg"
+            android:outlineProvider="background"
+            android:background="@drawable/rounded_border_background"/>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
             android:layout_weight="1"
-            android:orientation="horizontal" >
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/ad_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Ad Title"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/ad_category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Category"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:layout_marginTop="4dp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#cccccc"
+                android:layout_marginVertical="4dp"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <Button
+                    android:id="@+id/ad_message_button"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:layout_width="60dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:backgroundTint="@color/secondary"
+                    android:text="SMS"
+                    android:textColor="@color/white" />
+
+                <Button
+                    android:id="@+id/ad_call_button"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:backgroundTint="@color/secondary"
+                    android:contentDescription="Call"
+                    android:drawableTint="@color/white"
+                    android:drawableLeft="@drawable/baseline_call_24"
+                    android:paddingLeft="14dp" />
+
+                <Button
+                    android:id="@+id/ad_whatsapp_button"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:backgroundTint="@color/secondary"
+                    android:contentDescription="Whatsapp"
+                    android:drawableTint="@color/white"
+                    android:drawableLeft="@drawable/whatsapp"
+                    android:paddingLeft="12dp"
+                    android:textColor="@color/white" />
+
+            </LinearLayout>
 
             <Button
-                android:id="@+id/ad_message_button"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="60dp"
+                android:id="@+id/editBtn"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:backgroundTint="@color/primary"
-                android:text="SMS"
-                android:textColor="@color/white" />
+                android:text="Edit"
+                android:backgroundTint="#301934 "
+                android:textColor="@color/white"
+                android:layout_marginTop="8dp"
+                android:visibility="gone" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+            <Button
+                android:id="@+id/approveBtn"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:text="Approve"
+                android:backgroundTint="#008000"
+                android:textColor="@color/white"
+                android:visibility="gone" />
 
             <Button
-                android:id="@+id/ad_call_button"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="50dp"
+                android:id="@+id/disapproveBtn"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:backgroundTint="@color/tintcolor"
-                android:contentDescription="Call"
-                android:drawableLeft="@drawable/baseline_call_24"
-                android:paddingLeft="12dp" />
-
-            <Button
-                android:id="@+id/ad_whatsapp_button"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:backgroundTint="@color/tintcolor"
-                android:contentDescription="Whatsapp"
-                android:drawableLeft="@drawable/whatsapp"
-                android:paddingLeft="12dp"
-                android:textColor="@color/white" />
+                android:text="Reject"
+                android:backgroundTint="#8B0000"
+                android:textColor="@color/white"
+                android:visibility="gone" />
+            </LinearLayout>
 
         </LinearLayout>
-
-        <Button
-            android:id="@+id/editBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Edit"
-            android:visibility="gone" />
-
-        <Button
-            android:id="@+id/approveBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Approve"
-            android:visibility="gone" />
-
-        <Button
-            android:id="@+id/disapproveBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Reject"
-            android:visibility="gone" />
-
     </LinearLayout>
-
-</LinearLayout>
+</androidx.cardview.widget.CardView>
