--- a/app/src/main/res/layout/my_ads_activity.xml
+++ b/app/src/main/res/layout/my_ads_activity.xml
@@ -3,11 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@color/primary">
 
     <ListView
         android:id="@+id/seller_ads_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@color/white"/>
 
 </LinearLayout>
