--- a/app/src/main/res/drawable/rounded_border_background.xml
+++ b/app/src/main/res/drawable/rounded_border_background.xml
@@ -2,6 +2,6 @@
     <solid android:color="@android:color/white" />
     <corners android:radius="10dp" />
     <stroke
-        android:width="2dp"
-        android:color="@color/black" />
+        android:width="1dp"
+        android:color="#808080" />
 </shape>
