--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,14 +11,14 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Unlock Your"
-        android:textColor="@color/white"
-        android:textSize="28sp"
-        android:textStyle="bold"
+        android:layout_marginTop="16dp"
         android:fontFamily="sans-serif-black"
+        android:text="Your Ultimate Marketplace"
+        android:textColor="@color/black"
+        android:textSize="26sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.062"
+        app:layout_constraintHorizontal_bias="0.153"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,10 +27,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="NEXT Home With Us"
+        android:text="For Buying and Selling"
         android:fontFamily="sans-serif-black"
-        android:textColor="@color/white"
-        android:textSize="28sp"
+        android:textColor="@color/black"
+        android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.104"
@@ -39,12 +39,13 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="415dp"
-        android:layout_height="317dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_marginTop="10dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/exploreBtn"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:layout_constraintVertical_bias="0.0"
@@ -56,8 +57,9 @@
         android:layout_width="202dp"
         android:layout_height="55dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@color/tintcolor"
+        android:backgroundTint="@color/secondary"
         android:text="Explore!"
+        android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -69,9 +71,10 @@
         android:onClick="switchToLoginActivity"
         android:layout_width="202dp"
         android:layout_height="55dp"
-        android:layout_marginTop="12dp"
-        android:backgroundTint="@color/tintcolor"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/secondary"
         android:text="Seller Login"
+        android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,7 +88,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Want to Sell?"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -101,7 +104,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Register"
-        android:textColor="@color/tintcolor"
+        android:textColor="@color/secondary"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -110,7 +113,6 @@
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@id/loginBtn"
         app:layout_constraintVertical_bias="0.248" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
