--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,13 +25,14 @@
         android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:backgroundTint="#cccccc"
+        android:drawableTint="@color/black"
         android:drawableLeft="@drawable/baseline_vpn_key_24"
         android:drawablePadding="13dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColor="@color/black"
+        android:textColorHint="#cccccc"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -45,12 +46,13 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#cccccc"
         android:drawableLeft="@drawable/baseline_email_24"
+        android:drawableTint="@color/black"
         android:drawablePadding="13dp"
         android:ems="10"
         android:hint="Email Address"
         android:inputType="textEmailAddress"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColor="@color/black"
+        android:textColorHint="#cccccc"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.496"
@@ -62,7 +64,7 @@
         android:id="@+id/signinbtn"
         android:layout_width="260dp"
         android:layout_height="57dp"
-        android:backgroundTint="@color/tintcolor"
+        android:backgroundTint="@color/secondary"
         android:text="SIGN IN"
         android:textSize="15dp"
         android:onClick="login"
@@ -80,7 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Don't Have An Account?"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,7 +98,7 @@
         android:text="Register"
         android:clickable="true"
         android:onClick="switchToRegisterActivity"
-        android:textColor="@color/tintcolor"
+        android:textColor="@color/secondary"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
