--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -13,7 +13,7 @@
         android:text="Update Profile"
         android:fontFamily="sans-serif-black"
         android:textSize="28sp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="20dp"/>
@@ -24,9 +24,9 @@
         android:layout_height="wrap_content"
         android:hint="Full Name"
         android:backgroundTint="#cccccc"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="18sp"
-        android:textColorHint="@color/white"
+        android:textColorHint="#cccccc"
         android:inputType="text"/>
 
     <EditText
@@ -36,8 +36,8 @@
         android:hint="Email"
         android:textSize="18sp"
         android:backgroundTint="#cccccc"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColor="@color/black"
+        android:textColorHint="#cccccc"
         android:inputType="textEmailAddress"
         android:enabled="false"
         android:focusable="false"
@@ -49,14 +49,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Update Profile"
-        android:backgroundTint="@color/tintcolor"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/secondary"
         android:layout_marginTop="20dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Change Password"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="28sp"
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"
@@ -68,8 +69,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="#cccccc"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColor="@color/black"
+        android:textColorHint="#cccccc"
         android:textSize="18sp"
         android:hint="Current Password"
         android:inputType="textPassword"/>
@@ -78,9 +79,9 @@
         android:id="@+id/new_pwd_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/white"
+        android:textColorHint="#cccccc"
         android:backgroundTint="#cccccc"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:hint="New Password"
         android:textSize="18sp"
         android:inputType="textPassword"/>
@@ -89,7 +90,8 @@
         android:id="@+id/change_pwd_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/tintcolor"
+        android:backgroundTint="@color/secondary"
+        android:textColor="@color/black"
         android:layout_marginTop="20dp"
         android:text="Change Password" />
 
