--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -24,10 +24,11 @@
         android:id="@+id/signupbtn"
         android:layout_width="260dp"
         android:layout_height="57dp"
-        android:backgroundTint="@color/tintcolor"
+        android:backgroundTint="@color/secondary"
         android:text="SIGN UP"
         android:textSize="15sp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -39,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Already Registered?"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,12 +55,13 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#cccccc"
         android:drawableStart="@drawable/baseline_vpn_key_24"
+        android:drawableTint="@color/black"
         android:drawablePadding="13dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColor="@color/black"
+        android:textColorHint="#cccccc"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -73,12 +75,13 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#cccccc"
         android:drawableLeft="@drawable/baseline_email_24"
+        android:drawableTint="@color/black"
         android:drawablePadding="13dp"
         android:ems="10"
         android:hint="Email Address"
         android:inputType="textEmailAddress"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColor="@color/black"
+        android:textColorHint="#cccccc"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -93,7 +96,7 @@
         android:text="Sign In"
         android:clickable="true"
         android:onClick="switchToLoginActivity"
-        android:textColor="@color/tintcolor"
+        android:textColor="@color/secondary"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
