--- a/app/src/main/res/layout/add_new_activity.xml
+++ b/app/src/main/res/layout/add_new_activity.xml
@@ -1,15 +1,20 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@color/primary">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPagerImages"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_marginTop="16dp" />
+        android:layout_height="200dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/rounded_border_background"
+        android:scaleType="centerCrop" />
 
     <EditText
         android:id="@+id/editTitle"
@@ -17,53 +22,74 @@
         android:layout_height="wrap_content"
         android:hint="Ad Title"
         android:minHeight="48dp"
-        android:textColor="@color/black" />
+        android:paddingStart="10dp"
+        android:paddingTop="5dp"
+        android:textColor="@android:color/black"
+        android:background="@drawable/rounded_border_background" />
 
     <EditText
         android:id="@+id/editDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Description"
-        android:minHeight="48dp"
-        android:textColor="@color/black" />
+        android:paddingStart="10dp"
+        android:paddingTop="5dp"
+        android:paddingEnd="10dp"
+        android:minHeight="96dp"
+        android:textColor="@android:color/black"
+        android:background="@drawable/rounded_border_background"
+        android:gravity="top" />
 
     <EditText
         android:id="@+id/editContact"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Contact Info"
+        android:paddingStart="10dp"
+        android:paddingTop="5dp"
         android:minHeight="48dp"
-        android:textColor="@color/black" />
+        android:textColor="@android:color/black"
+        android:background="@drawable/rounded_border_background" />
 
     <Spinner
         android:id="@+id/spinnerCategory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/white"
-        android:hint="Select Category"
+        android:backgroundTint="@android:color/white"
         android:minHeight="48dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:paddingStart="10dp"
+        android:textColor="@android:color/black"
+        android:textColorHint="@android:color/black"
+        android:background="@drawable/rounded_border_background" />
 
     <Button
         android:id="@+id/btnAddImages"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/tintcolor"
-        android:text="Add Images" />
+        android:backgroundTint="@color/secondary"
+        android:textColor="@color/black"
+        android:text="Add Images"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp" />
 
     <Button
         android:id="@+id/btnPreview"
         android:layout_width="200dp"
-        android:backgroundTint="@color/tintcolor"
         android:layout_height="wrap_content"
-        android:text="Preview Ad" />
+        android:backgroundTint="@color/secondary"
+        android:textColor="@color/black"
+        android:text="Preview Ad"
+        android:layout_gravity="center"
+        android:layout_marginTop="12dp" />
 
     <Button
         android:id="@+id/btnSubmit"
         android:layout_width="200dp"
-        android:backgroundTint="@color/tintcolor"
+        android:backgroundTint="@color/secondary"
+        android:textColor="@color/black"
         android:layout_height="wrap_content"
-        android:text="Submit Ad" />
+        android:text="Submit Ad"
+        android:layout_gravity="center"
+        android:layout_marginTop="12dp" />
 
 </LinearLayout>
