--- a/app/src/main/res/layout/admin_activity.xml
+++ b/app/src/main/res/layout/admin_activity.xml
@@ -2,28 +2,39 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@color/primary">
 
     <TextView
         android:id="@+id/textViewAds"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ads"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:textStyle="bold"
+        android:textColor="@android:color/black"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp" />
+        android:layout_marginBottom="16dp" />
 
     <ListView
-        android:allowClickWhenDisabled="true"
         android:id="@+id/listViewAds"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_below="@id/textViewAds"
-        android:layout_marginBottom="20dp"
+        android:layout_height="200dp"
+        android:layout_below="@+id/textViewAds"
         android:divider="@android:color/darker_gray"
-        android:dividerHeight="1dp" />
+        android:dividerHeight="1dp"
+        android:layout_marginBottom="16dp"
+        android:background="@color/white" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        android:layout_below="@id/listViewAds"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp" />
 
     <TextView
         android:id="@+id/textViewCategories"
@@ -31,21 +42,23 @@
         android:layout_height="wrap_content"
         android:text="Categories"
         android:textStyle="bold"
-        android:textSize="20sp"
-        android:layout_below="@id/listViewAds"
+        android:textSize="24sp"
+        android:layout_below="@id/view"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp" />
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:textColor="@android:color/black" />
 
     <ListView
         android:id="@+id/listViewCategories"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="200dp"
         android:layout_below="@id/textViewCategories"
-        android:layout_marginBottom="102dp"
         android:divider="@android:color/darker_gray"
         android:dividerHeight="1dp"
-        android:paddingTop="5dp" />
+        android:paddingTop="8dp"
+        android:layout_marginBottom="48dp"
+        android:background="@color/white" />
 
     <Button
         android:id="@+id/btnAddCategory"
@@ -54,6 +67,8 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="16dp"
-        android:text="Add Category" />
+        android:backgroundTint="@color/secondary"
+        android:text="Add Category"
+        android:textColor="@android:color/black" />
 
 </RelativeLayout>
